Remove SecurityController from refresh
