# src/swagger.json
@@ -423,7 +423,7 @@
 	},
 	"info": {
 		"title": "sly-auth-api",
-		"version": "1.9.3-1",
+		"version": "1.9.3",
 		"description": "To generate a JWT token, go to the <a href=\"https://sly-dev.futz.dev/auth/jwt.html\" target=\"_blank\">JWT Token Generator</a>"
 	},
 	"openapi": "3.0.0",
@@ -851,12 +851,17 @@
 				"tags": [
 					"Jwt"
 				],
-				"security": [
+				"security": [],
+				"parameters": [
 					{
-						"jwt": []
+						"in": "header",
+						"name": "authorization",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
 					}
-				],
-				"parameters": []
+				]
 			}
 		},
 		"/api/v1/jwt/authorize": {
